<resources>
    <string name="app_name">SMS2Mail Forwarder</string>
    <string name="service_name">SMS2MailForwarderService</string>

    <string name="btn_send_test_mail">send test mail</string>

    <string name="default_mail_subject">Test mail from SMS2MailForwarder</string>
    <string name="default_mail_body">This is an email sent using the Mail JavaMail wrapper from an Android device.</string>

    <string name="mail_subject">Forwarded SMS</string>

    <string name="mail_sent_successfully">Email was sent successfully.</string>
    <string name="mail_not_sent">Email was not sent.</string>
    <string name="mail_send_problem">There was a problem sending the email.</string>
    <string name="mail_could_not_send_email">Could not send email</string>

    <string name="from">"From: "</string>
    <string name="tv_basic_settings">Basic Settings</string>
    <string name="tv_recipients">Recipients</string>
    <string name="tv_forwarder">Forwarder</string>
    <string name="tv_server_settings">Mail-Server Settings</string>
    <string name="tv_user">User</string>
    <string name="tv_password">Password</string>
    <string name="tv_smtp">SMTP-Server</string>
</resources>
