<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.github.jhaucke.sms2mailforwarder.MainActivity">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:rowCount="9"
            android:columnCount="2"
            android:orientation="horizontal"
            android:id="@+id/layout_main_grid">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tv_basic_settings"
                android:id="@+id/tv_basic_settings"
                android:layout_columnSpan="2"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_recipients"
                android:id="@+id/tv_recipients"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_recipients"
                android:layout_row="1"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_forwarder"
                android:id="@+id/tv_forwarder"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_forwarder"
                android:layout_row="2"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tv_server_settings"
                android:id="@+id/tv_server_settings"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_user"
                android:id="@+id/tv_user"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_user"
                android:layout_row="4"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_password"
                android:id="@+id/tv_password"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_password"
                android:layout_row="5"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_smtp"
                android:id="@+id/tv_smtp"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_smtp"
                android:layout_row="6"
                android:layout_column="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_send_test_mail"
                android:id="@+id/btn_send_test_mail"
                android:layout_columnSpan="2"
                android:layout_row="7"
                android:layout_column="0" />
        </GridLayout>
    </RelativeLayout>
</ScrollView>